--- a/script/script.css
+++ b/script/script.css
@@ -1,4 +1,5 @@
 body{
+    margin: 0;
     font-family: 'Poppins', sans-serif;
     font-family: 'Roboto', sans-serif;
 }
@@ -54,7 +55,7 @@ body{
     transition: .7s;
 }
 
-.buttons{
+.button-grey{
     border: none;
     padding: 11px 18px;
     background-color: #575445;
@@ -64,10 +65,13 @@ body{
     color: #FFFFFF;
 }
 
-.button_basket{
+.button-grey_basket{
     position: relative;
+}
+
+.button_basket{
     width: 125px;
-    height: 44px;
+    height: 44px
 }
 
 .header_img{
@@ -76,21 +80,21 @@ body{
     height: 18px;
     border-radius: 50%;
     background-color: white;
-    top: 34px;
-    right: 165px;
+    top: 15px;
+    right: 14px;
 }
 
 .header_basket{
     position: absolute;
-    top: 34px;
-    right: 235px;
+    top: 16px;
+    right: 86px;
 }
 
 .header_number{
     position: absolute;
     color: #575445;
-    top: 36px;
-    right: 170px;
+    top: 16px;
+    right: 19px;
 }
 
 .exploration{
@@ -130,15 +134,17 @@ body{
     font-family: 'Poppins';
     font-size: 17px;
     line-height: 25px;
-    color: #CACCD1;
+    color: rgba(87, 84, 69, 1);
 }
+
+
 
 .about{
     position: relative;
+    padding: 100px 0;
 }
 
 .about_img{
-   
     z-index: 3;
 }
 
@@ -152,23 +158,40 @@ body{
 .about_fon_bottom{
     position: absolute;
     bottom: 0;
-    right: 1300px;
+    left: 20px;
     z-index: 1;
 }
 
 .about_v_text{
     max-width: 384px;
+    margin-bottom: 20px;
 }
 
-.carusel{
-    margin-right: 88px;
+.about_content{
+    /* margin-right: 88px; */
 }
+
+.buttons{
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    font-family: 'Poppins';
+    font-size: 15px;
+    line-height: 21px;
+    color: rgba(87, 84, 69, 1);
+}
+
+.buttons::after{
+    content: url(../img/about/arrow.png);
+    margin-left: 4px;
+}
+
+
 
 .setting{
     position: relative;
     background-color: rgba(250, 250, 252, 1);
     padding: 99px 0 159px;
-
 }
 
 .setting_top{
@@ -179,6 +202,7 @@ body{
 .setting_v_text{
     max-width: 538px;
     text-align: center;
+    margin: 0 auto;
     margin-bottom: 71px;
 }
 
@@ -226,4 +250,237 @@ body{
     position: absolute;
     left: 0px;
     bottom: 0;
+}
+
+
+
+.categories{
+    margin: 100px auto;
+    text-align: center;
+}
+
+.categories_v_text{
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 21px;
+}
+
+.grid_categories{
+    margin-bottom: 21px;
+}
+
+.categories_list{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 16px;
+}
+
+.categories_items{
+    position: relative;
+}
+
+.categories_img_top{
+    position: absolute;
+    left: 39px;
+    top: 35px;
+}
+
+.categories_title{
+    font-family: 'Roboto';
+    font-size: 28px;
+    line-height: 34px;
+    color: #575445;
+    margin-bottom: 9px;
+}
+
+.categories_text{
+    max-width: 291px;
+    font-family: 'Poppins';
+    font-size: 16px;
+    line-height: 22px;
+    color: #575445;
+    margin-bottom: 20px;
+}
+
+
+
+.products_top{
+    position: relative;
+}
+
+.products_top_content{
+    position: absolute;
+    width: 615px; 
+    height: 48px;
+    padding: 16px 22px;
+    border-radius: 16px;
+    background: #292C32;
+    box-sizing: border-box;
+    right: 40px;
+    bottom: 40px;
+}
+
+.products_list .flex{
+    align-items: center;
+}
+
+.products_icon{
+    margin-right: 8px;
+}
+
+.products_text{
+    font-family: 'Poppins';
+    font-size: 12px;
+    line-height: 12px;
+    color: #FFFFFF;
+}
+
+.products_bottom{
+    padding: 100px 0;
+    background-color: #415948;
+}
+
+.products_v_text{
+    max-width: 538px;
+    text-align: center;
+    margin: 0 auto;
+    font-family: 'Poppins';
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    color:rgba(250, 250, 252, 1);
+    margin-bottom: 21px;
+}
+
+.products_pre_title{
+    text-align: center;
+    margin: 0 auto;
+    font-family: 'Poppins';
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color:rgba(250, 250, 252, 1);
+}
+
+.products_title{
+    text-align: center;
+    margin: 0 auto;
+    color: rgba(230, 185, 57, 1);
+    margin-bottom: 7px;
+}
+
+.products_buttons{
+    text-align: center;
+    margin: 0 auto;
+}
+
+.products_bottom{
+    position: relative;
+}
+
+.products_button{
+    text-align: center;
+    margin: 0 auto;
+    width: 111px;
+    height: 44px;
+    background-color: rgba(255, 255, 255, 1);
+    border: none;
+    border-radius: 6px;
+    font-family: 'Poppins';
+    font-size: 15px;
+    line-height: 22px;
+    text-align: center;
+    color: #575445;
+}
+
+.products_bottom_fon img{
+    position: absolute;
+    bottom: 5px;
+    top: 5px;
+}
+
+.subscribe_title{
+    max-width: 295px;
+}
+
+.footer{
+    background-color:  rgba(87, 84, 69, 1);
+    padding: 100px 0;
+}
+
+.footer_logo{
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 75px;
+}
+
+.footer_content {
+    display: flex;
+    align-items: flex-start;
+}
+
+.footer_content_left .flex{
+    align-items: flex-start;
+}
+
+.footer_list{
+    margin-right: 75px;
+}
+
+.footer_list:not(:last-child){
+    margin-bottom: 9px;
+}
+
+.footer_list_title{
+    font-family: 'Poppins';
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: #E6B939;
+    margin-bottom: 9px;
+}
+
+.footer_list_paragraph{
+    font-family: 'Poppins';
+    font-size: 14px;
+    line-height: 20px;
+    color: #FFFFFF;
+}
+
+.footer_list_text{
+    max-width: 438px;
+    font-family: 'Poppins';
+    font-size: 14px;
+    line-height: 20px;
+    color: #FAFAFC;
+    margin-bottom: 9px;
+}
+
+.footer_input{
+    width: 458px;
+    height: 53px;
+    background: #F9FAFB;
+    border: 1px solid #E5E7EB;
+    border-radius: 8px;
+    padding-left: 21px;
+}
+
+.footer_input::placeholder{
+    font-family: 'Poppins';  
+    font-size: 14px;
+    line-height: 20px;
+    color: #575445;
+}
+
+.footer_right_form{
+    position: relative;
+}
+
+.footer_button{
+    position: absolute;
+    right: 7px;
+    bottom: 7px;
 }
