--- a/script/script.css
+++ b/script/script.css
@@ -63,6 +63,11 @@ body{
     font-size: 16px;
     line-height: 22px;
     color: #FFFFFF;
+    cursor: pointer;
+}
+
+.button-grey:hover{
+    transform: scale(1.1);
 }
 
 .button-grey_basket{
@@ -179,6 +184,11 @@ body{
     font-size: 15px;
     line-height: 21px;
     color: rgba(87, 84, 69, 1);
+}
+
+.buttons:hover{
+    color: #000000;
+    font-weight: bold;
 }
 
 .buttons::after{
@@ -395,6 +405,10 @@ body{
     color: #575445;
 }
 
+.products_button:hover{
+    transform: scale(1.3);
+}
+
 .products_bottom_fon img{
     position: absolute;
     bottom: 5px;
@@ -421,7 +435,8 @@ body{
     align-items: flex-start;
 }
 
-.footer_content_left .flex{
+.footer_content_left{
+    display: flex;
     align-items: flex-start;
 }
 
@@ -480,7 +495,61 @@ body{
 }
 
 .footer_button{
+    width: 73px;
+    height: 39px;
+    box-sizing: border-box;
     position: absolute;
-    right: 7px;
-    bottom: 7px;
+    right: 20px;
+    bottom: 11px;
+}
+
+.navigating {
+    padding: 100px 0 72px;
+}
+
+.navigating_pre_title{
+    margin-bottom: 0;
+}
+
+.navigating_text{
+    max-width: 538px;
+    margin-bottom: 21px;
+}
+
+.navigating_foto{
+    margin-bottom: 18px;
+}
+
+.nav_v_text{
+    max-width: 465px;
+    margin-bottom: 12px;
+}
+
+.navigating_persons{
+    max-width: 570px;
+}
+
+.persons{
+    margin-left: -300px;
+}
+
+.persons_name{
+    font-family: 'Roboto';
+    font-size: 13px;
+    line-height: 18px;
+    color: #575445;
+}
+
+.persons_position{
+    font-family: 'Poppins';
+    font-size: 11px;
+    line-height: 15px;
+    color: #E6B939;
+}
+
+.persons_data{
+    font-family: 'Poppins';
+    font-size: 13px;
+    line-height: 18px;
+    color: #6F7278;
 }
