--- a/style.css/script.css
+++ b/style.css/script.css
@@ -106,6 +106,9 @@ body{
     text-align: left;
     padding: 200px 0 228px 120px;
     background-image: url(../img/exploration/1.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
 }
 
 .v_pre_title{
@@ -172,9 +175,6 @@ body{
     margin-bottom: 20px;
 }
 
-.about_content{
-    /* margin-right: 88px; */
-}
 
 .buttons{
     background-color: transparent;
@@ -317,6 +317,7 @@ body{
 
 .products_top{
     position: relative;
+    line-height: 0;
 }
 
 .products_top_content{
@@ -406,7 +407,7 @@ body{
 }
 
 .products_button:hover{
-    transform: scale(1.3);
+    transform: scale(1.5);
 }
 
 .products_bottom_fon img{
