--- a/style.css/script.css
+++ b/style.css/script.css
@@ -407,7 +407,7 @@ body{
 }
 
 .products_button:hover{
-    transform: scale(1.5);
+    transform: scale(1.3);
 }
 
 .products_bottom_fon img{
@@ -506,6 +506,14 @@ body{
 
 .navigating {
     padding: 100px 0 72px;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.carusel{
+    text-align: center;
+    margin: 0 auto;
+ 
 }
 
 .navigating_pre_title{
@@ -513,6 +521,8 @@ body{
 }
 
 .navigating_text{
+    text-align: center;
+    margin: 0 auto;
     max-width: 538px;
     margin-bottom: 21px;
 }
